# munin

./: .gitignore  PROTOCOL.md  README.md  config.example.json  generate_example_config.py  monitor_serial.py  munin-logging-protocol.md  munin.ino  pyproject.toml  test_led_config.py
.west/: config
munin_client/: __main__.py  ble_manager.py  config.py  device.py  logger.py  settings_editor.py  settings_window.py  time_summary.py  time_tracker.py  tray.py
munin_zephyr/: CMakeLists.txt  build-and-flash.sh  prj.conf  west.yml
munin_zephyr/src/: battery.c  battery.h  ble.c  ble.h  imu.c  imu.h  main.c  munin_protocol.c  munin_protocol.h
zephyr_workspace/munin_app/: CMakeLists.txt  app.overlay  build-and-flash.sh  flash.sh  prj.conf
zephyr_workspace/munin_app/src/: battery.c  battery.h  ble.c  ble.h  debug.h  imu.c  imu.h  led_config.c  led_config.h  led_effects.c  led_effects.h  main.c  munin_protocol.c  munin_protocol.h  sk6812.c  sk6812.h
